# husky

husky_base/: CMakeLists.txt
husky_bringup/: CMakeLists.txt
husky_control/: CMakeLists.txt
husky_control/config/: twist_mux.yaml
husky_description/: CMakeLists.txt
husky_drs/: CMakeLists.txt  package.xml
husky_drs/config/: rosconsole.conf
husky_drs/launch/: control_multisense.launch  description_multisense.launch  elevation_mapping.launch  husky_atrium_multisense.launch  husky_cdt_bringup.launch  husky_empty_world_multisense.launch  husky_multisense_atrium.launch  husky_nav.launch  husky_ori_atrium.launch  husky_ori_or_reactor_room.launch  husky_point_cloud_filter.launch  husky_scan_to_cloud.launch  husky_static_base_head_transform_publisher.launch  multisense.launch  record_rosbag_rosHusky.launch  rs_camera_husky.launch  sick_lms_husky_cdt.launch  sick_lms_husky_cdt_front.launch  sick_lms_husky_cdt_rear.launch  spawn_husky_multisense.launch  transformations_ros_husky.launch
husky_drs/rviz/: husky_cdt.rviz  real_husky.rviz
husky_drs/scripts/: husky_odom_to_pose_shim.py
husky_drs/urdf/: husky_multisense.urdf.xacro
husky_gazebo/: CMakeLists.txt
husky_navigation/: CMakeLists.txt
husky_navigation_ori/: CMakeLists.txt  package.xml
husky_navigation_ori/launch/: or_reactor_room_nav.launch
husky_navigation_ori/maps/: or_reactor_room.pgm
husky_ori/: package.xml
husky_ori_navigation/: CMakeLists.txt  package.xml
husky_ori_navigation/config/: planner.yaml
husky_ori_navigation/launch/: amcl.launch  move_base.launch  or_reactor_room_nav.launch
husky_ori_navigation/maps/: or_reactor_room.yaml
husky_viz/: CMakeLists.txt
(+14 files in other folders)
