<?xml version="1.0"?>
<package>
  <name>husky_navigation_ori</name>
  <version>0.0.1</version>
  <description>Maps and Config files for ORI Husky move_base</description>

  <author email="bruno@robots.ox.ac.uk">Bruno Lacerda</author>

  <maintainer email="bruno@robots.ox.ac.uk">Bruno Lacerda</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>husky_navigation</run_depend>

  <export>
  </export>
</package>
